--- a/docker/php-fpm/php.ini
+++ b/docker/php-fpm/php.ini
@@ -1,10 +1,10 @@
 [XDebug]
-xdebug.mode=off
-;xdebug.start_with_request=yes
-;xdebug.client_host=172.17.0.1
+xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.client_host=172.17.0.1
 xdebug.log="/var/log/php-fpm/xdebug.log"
 xdebug.output_dir="/var/log/php-fpm/"
-;xdebug.idekey=VSCODE
+xdebug.idekey=VSCODE
 
 [PHP]
 
